fix newlines in textareas on Firefox (#82)

--- a/source/css/forms.css
+++ b/source/css/forms.css
@@ -141,7 +141,7 @@ textarea.input-xl {
   height: auto;
   resize: vertical;
   line-height: var(--line-height);
-  white-space: normal;
+  white-space: pre-wrap;
 }
 
 /* Range */
